Update main text and test blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,9 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %} -->
 
-        <a href="https://scholar.google.com/citations?user=drP5-oIAAAAJ&hl">Scholar</a>  &nbsp;&nbsp;&nbsp;  <a href="https://github.com/pwcannon">GitHub</a>  &nbsp;&nbsp;&nbsp;  <a href="https://www.linkedin.com/in/patrick-cannon/">LinkedIn</a> &nbsp;&nbsp;&nbsp; <a href="https://twitter.com/pw_cannon">Twitter</a>
+        <!-- regular hyperlink colours -->
+        <a href="https://scholar.google.com/citations?user=drP5-oIAAAAJ&hl">Scholar</a>  &nbsp;&nbsp;&nbsp;&nbsp;  <a href="https://github.com/pwcannon">GitHub</a>  &nbsp;&nbsp;&nbsp;&nbsp;  <a href="https://www.linkedin.com/in/patrick-cannon/">LinkedIn</a> &nbsp;&nbsp;&nbsp;&nbsp; <a href="https://twitter.com/pw_cannon">Twitter</a>
+
 
         <!-- {% if site.show_downloads %}
         <ul class="downloads">
@@ -44,6 +46,30 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %} -->
+        <span style="display: block; margin-top: 20px;"></span>
+
+
+
+        <!-- <a href="./blog.html" style="color: #267CB9; text-decoration: none;">
+          <img src="./assets/img/computer_explorer_cool-0.png" alt="95PC" width="40" style="position: relative; top: 10px; border: 2px solid #267CB9;">
+          &nbsp; Browse through the blog
+      </a> -->
+      
+
+      <!-- <div class="link-container">
+        <a href="./blog.html" style="TEXT-DECORATION: underline">
+            <img src="./assets/img/keyboard-5.png" alt="95PC" width="40" style="border: 2px solid #267CB9; position: relative; top: 10px;">
+            <span class="link-text">&nbsp;&nbsp;&nbsp; Browse through the blog</span>
+        </a>
+    </div> -->
+        <div class="link-container">
+          <a href="./blog.html" style = "color: rgb(142, 63, 151);">
+              <img src="./assets/img/keyboard-5.png" alt="95PC" width="40" style="position: relative; top: 10px;">
+              <span class="link-text">&nbsp;&nbsp;&nbsp; Browse the blog</span>
+          </a>
+      </div>
+  
+
       </header>
       <section>
 
