--- a/_layouts/default_2.html
+++ b/_layouts/default_2.html
@@ -53,6 +53,17 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %} -->
+
+        <span style="display: block; margin-top: 20px;"></span>
+
+        <div class="link-container">
+          <a href="../index.html" style = "color: rgb(142, 63, 151);">
+              <img src="./assets/img/computer_explorer_cool-0.png" alt="95PC" width="40" style="position: relative; top: 10px;">
+              <span class="link-text">&nbsp;&nbsp;&nbsp; Back to home page</span>
+          </a>
+      </div>
+
+
       </header>
       <section>
 
