--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,6 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
@@ -63,12 +62,12 @@
         </a>
     </div> -->
         <div class="link-container">
-          <a href="./blog.html" style = "color: rgb(142, 63, 151);">
+          <!-- style = "color: rgb(142, 63, 151);" -->
+          <a href="./blog.html">
               <img src="./assets/img/keyboard-5.png" alt="95PC" width="40" style="position: relative; top: 10px;">
               <span class="link-text">&nbsp;&nbsp;&nbsp; Browse the blog</span>
           </a>
       </div>
-  
 
       </header>
       <section>
