Word art blog button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,11 @@
         {% endif %} -->
 
         <!-- regular hyperlink colours -->
-        <a href="https://scholar.google.com/citations?user=drP5-oIAAAAJ&hl">Scholar</a>  &nbsp;&nbsp;&nbsp;&nbsp;  <a href="https://github.com/pwcannon">GitHub</a>  &nbsp;&nbsp;&nbsp;&nbsp;  <a href="https://www.linkedin.com/in/patrick-cannon/">LinkedIn</a> &nbsp;&nbsp;&nbsp;&nbsp; <a href="https://twitter.com/pw_cannon">Twitter</a>
-
+        <!-- <a href="https://scholar.google.com/citations?user=drP5-oIAAAAJ&hl">Scholar</a>  &nbsp;&nbsp;&nbsp;&nbsp;  <a href="https://github.com/pwcannon">GitHub</a>  &nbsp;&nbsp;&nbsp;&nbsp;  <a href="https://www.linkedin.com/in/patrick-cannon/">LinkedIn</a> &nbsp;&nbsp;&nbsp;&nbsp; <a href="https://twitter.com/pw_cannon">Twitter</a> -->
+        <a href="https://scholar.google.com/citations?user=drP5-oIAAAAJ&hl" style="color: rgb(95, 92, 95);">Scholar</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://github.com/pwcannon" style="color: rgb(95, 92, 95);">GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/in/patrick-cannon/" style="color: rgb(95, 92, 95);">LinkedIn</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://twitter.com/pw_cannon" style="color: rgb(95, 92, 95);">Twitter</a>
 
         <!-- {% if site.show_downloads %}
         <ul class="downloads">
@@ -45,7 +48,7 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %} -->
-        <span style="display: block; margin-top: 20px;"></span>
+        <span style="display: block; margin-top: 40px;"></span>
 
 
 
@@ -61,13 +64,18 @@
             <span class="link-text">&nbsp;&nbsp;&nbsp; Browse through the blog</span>
         </a>
     </div> -->
-        <div class="link-container">
-          <!-- style = "color: rgb(142, 63, 151);" -->
+        <!-- <div class="link-container"> -->
+          <!-- style = "color: rgb(142, 63, 151);"
           <a href="./blog.html">
               <img src="./assets/img/keyboard-5.png" alt="95PC" width="40" style="position: relative; top: 10px;">
               <span class="link-text">&nbsp;&nbsp;&nbsp; Browse the blog</span>
           </a>
-      </div>
+      </div> -->
+
+              
+        <a href="./blog.html" class="image-link">
+            <img src="./assets/img/wordart.png" alt="95PC" width="250">
+        </a>
 
       </header>
       <section>
