--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -288,3 +288,16 @@ footer {
     color:#444;
   }
 }
+
+/* CSS */
+.image-link {
+  display: inline-flex;
+  justify-content: center; /* Horizontally center the content */
+  align-items: center; /* Vertically center the content */
+  position: relative;
+  transition: transform 0.3s ease;
+}
+
+.image-link:hover {
+  transform: scale(1.1);
+}
