Pretty links and remove index in URL

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
       </div> -->
 
               
-        <a href="./blog.html" class="image-link">
+        <a href="./blog" class="image-link">
             <img src="./assets/img/wordart.png" alt="95PC" width="250">
         </a>
 
