--- a/_layouts/default_2.html
+++ b/_layouts/default_2.html
@@ -71,12 +71,12 @@
       {{ content }}
 
       <div class="link-container">
-        <a href="../index.html" style = "color: rgb(142, 63, 151);">
-            <img src="./assets/img/computer_explorer_cool-0.png" alt="95PC" width="40" style="position: relative; top: 10px;">
+        <a href="../" style = "color: rgb(142, 63, 151);">
+            <img src="../assets/img/computer_explorer_cool-0.png" alt="95PC" width="40" style="position: relative; top: 10px;">
             <span class="link-text">&nbsp;&nbsp;&nbsp; Back to home page</span>
         </a>
     </div>
-    
+
       </section>
       <footer>
         <!-- {% if site.github.is_project_page %}
