remove blog temporarily

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,9 +73,11 @@
       </div> -->
 
               
+       <!-- TAKING THE BLOG OUT FOR NOW
         <a href="./blog" class="image-link">
             <img src="./assets/img/wordart.png" alt="95PC" width="250">
-        </a>
+        </a> -->
+        <!-- TAKING THE BLOG OUT FOR NOW -->
 
       </header>
       <section>
